删除旧版数据权限
