# admin-vue3/src/api/system/role.js
@@ -35,15 +35,6 @@ export function updateRole(data) {
   })
 }
 
-// 角色数据权限
-export function dataScope(data) {
-  return request({
-    url: '/system/role/dataScope',
-    method: 'put',
-    data: data
-  })
-}
-
 // 角色状态修改
 export function changeRoleStatus(roleId, status) {
   const data = {
@@ -110,10 +101,4 @@ export function authUserSelectAll(data) {
   })
 }
 
-// 根据角色ID查询部门树结构
-export function deptTreeSelect(roleId) {
-  return request({
-    url: '/system/role/deptTree/' + roleId,
-    method: 'get'
-  })
-}
+// 数据权限相关接口已移除
