# server/src/module/system/role/role.controller.ts
@@ -45,15 +45,6 @@ export class RoleController {
   }
 
   @ApiOperation({
-    summary: '角色管理-部门树',
-  })
-  @RequirePermission('system:role:edit')
-  @Get('deptTree/:id')
-  deptTree(@Param('id') id: string) {
-    return this.roleService.deptTree(+id);
-  }
-
-  @ApiOperation({
     summary: '角色管理-详情',
   })
   @RequirePermission('system:role:query')
@@ -73,19 +64,6 @@ export class RoleController {
   @Put()
   update(@Body() updateRoleDto: UpdateRoleDto) {
     return this.roleService.update(updateRoleDto);
-  }
-
-  @ApiOperation({
-    summary: '角色管理-数据权限修改',
-  })
-  @ApiBody({
-    type: UpdateRoleDto,
-    required: true,
-  })
-  @RequirePermission('system:role:edit')
-  @Put('dataScope')
-  dataScope(@Body() updateRoleDto: UpdateRoleDto) {
-    return this.roleService.dataScope(updateRoleDto);
   }
 
   @ApiOperation({
